reports/dist/run-full-bench-20260609-085346/gateway-api-contour-gateway-api-route-precedence/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"contour"},"spec":{"controllerName":"projectcontour.io/gateway-controller"}}
    creationTimestamp: "2026-06-09T13:26:03Z"
    generation: 1
    name: contour
    resourceVersion: "608"
    uid: 337dbdbd-9106-47ae-b84c-63ae554e0a32
  spec:
    controllerName: projectcontour.io/gateway-controller
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:26:03Z"
      message: Gateway API CRD bundle version v1.3.0 is supported.
      observedGeneration: 1
      reason: SupportedVersion
      status: "True"
      type: SupportedVersion
    - lastTransitionTime: "2026-06-09T13:26:03Z"
      message: GatewayClass has been accepted by the controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
